# coercible-utils

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  coercible-utils.cabal  stack.yaml
benchmark/: Main.hs
src/: CoercibleUtils.hs
src/CoercibleUtils/: Compose.hs  Newtype.hs  Wild.hs
src/Control/Newtype/: Generic.hs
test/: Spec.hs
